# spidior

./: Cargo.toml  README.md
resources/test/: functions.java  identifiers.java  identifiers_replaced.java
src/: java.rs  main.rs  parsing.rs
src/editing/: mod.rs  textbuffer.rs
src/languages/: clike.rs  mod.rs  rustlike.rs
src/matcher/: mod.rs
src/nfa/: matcher.rs  mod.rs  queryengine.rs  replacer.rs
src/regex2nfa/: mod.rs
src/regexparser/: ast.rs  location.lalrpop  mod.rs  parsecommand.rs  parsereplacement.rs  query.lalrpop  reg.lalrpop  set.lalrpop
