[package]
name = "spidior"
version = "0.1.1"
authors = ["John Westhoff <johnwesthoff@nyu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.4"

[dependencies]
walkdir = "2"
lalrpop-util = "0.19.4"
regex = "1"
clap = "3.0.0-beta.2"