[package]
name = "spidior"
version = "0.2.2"
authors = ["John Westhoff <johnwesthoff@nyu.edu>"]
description = "A tool for handling sed-like substitution tasks where pesky source code semantics are getting in the way."
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/JohnathonNow/spidior"
keywords = ["tools", "regex", "sed"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = "0.19.4"

[dependencies]
walkdir = "2"
lalrpop-util = "0.19.4"
regex = "1"
clap = { version = "3.1.1", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
